--- a/animation.html
+++ b/animation.html
@@ -82,7 +82,7 @@ Released   : 20130406
     </div>
 
     <div class="centered-gif">
-        <img src="whale.gif" alt="A whale GIF" />
+        <img src="whale.gif"/>
     </div>
     
 <!-- END OF THE NAVIGATION SECTION. -->
