--- a/animation.html
+++ b/animation.html
@@ -84,6 +84,13 @@ Released   : 20130406
     <div class="centered-gif">
         <img src="whale.gif"/>
     </div>
+
+     <div class="video-container">
+        <iframe width="560" height="315" src="https://youtu.be/sovyhXnFMpQ" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
+    </div>
     
 <!-- END OF THE NAVIGATION SECTION. -->
 
