--- a/animation.html
+++ b/animation.html
@@ -85,9 +85,11 @@ Released   : 20130406
         <img src="whale.gif"/>
     </div>
 
-     <div class="video-container">
-        <iframe width="560" height="315" src="https://youtu.be/sovyhXnFMpQ" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    <!-- Video Embed Section -->
+    <div class="video-container" style="text-align: center; margin-top: 20px;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sovyhXnFMpQ" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
     </div>
