--- a/screencast.html
+++ b/screencast.html
@@ -86,7 +86,7 @@ Released   : 20130406
     
     <!-- Embedded YouTube Video -->
     <div class="video-container">
-        <iframe width="560" height="315" src="https://youtu.be/WcmiD06lurk" 
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WcmiD06lurk&feature=youtu.be" 
             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
