--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ Released   : 20130406
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 <!-- SET THE PAGE TITLE INSIDE THE TITLE TAGS BELOW -->
-<title>Danielle's ePortfolio</title> 
+<title><div class="typewriter">Danielle's ePortfolio</div> 
+</title> 
 <link rel="icon" href="headshot.png" type="image/jpeg">
 
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
