--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Released   : 20130406
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 <!-- SET THE PAGE TITLE INSIDE THE TITLE TAGS BELOW -->
-<title><div class="typewriter">Danielle's ePortfolio</div> 
+<title>Danielle's ePortfolio
 </title> 
 <link rel="icon" href="headshot.png" type="image/jpeg">
 
@@ -52,7 +52,8 @@ Released   : 20130406
 	</div>
 	<div id="logo" class="container">
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE HEADER FOR EACH PAGE. -->
-        <h1>Danielle Claxton's ePortfolio</h1>
+        <h1><div class="typewriter">Danielle Claxton's ePortfolio</div> 
+</h1>
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
         <p>Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
 	</div>
