--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Released   : 20130406
 	</div>
 	<div id="logo" class="container">
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE HEADER FOR EACH PAGE. -->
-        <div class="typewriter"><h1>Danielle Claxton's ePortfolio
-</h1></div> 
+       <h1>Danielle Claxton's ePortfolio
+</h1>
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
         <p>Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
 	</div>
