--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@ Released   : 20130406
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+
+@keyframes typewriter {
+    from { width: 0; }
+    to { width: 100%; }
+}
+
+@keyframes blink {
+    50% { border-color: transparent; }
+}
+
+.typewriter {
+    overflow: hidden; 
+    border-right: 0.15em solid orange; /* Cursor color */
+    white-space: nowrap; 
+    margin: 0 auto; 
+    letter-spacing: 0.15em; 
+    animation: 
+        typewriter 4s steps(40, end),
+        blink 0.75s step-end infinite;
+    display: inline-block;
+    font-family: 'DM Sans', sans-serif; /* Matches your existing font */
+    font-size: 2em; /* Adjust size as needed */
+    color: #000; /* Adjust color as needed */
+    max-width: 100%;
+}
+
 </head>
 
 <body>
@@ -52,8 +78,8 @@ Released   : 20130406
 	</div>
 	<div id="logo" class="container">
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE HEADER FOR EACH PAGE. -->
-       <h1>Danielle Claxton's ePortfolio
-</h1>
+      <h1 class="typewriter">Danielle Claxton's ePortfolio</h1>
+
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
         <p>Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
 	</div>
