--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ Released   : 20130406
 
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 
-@keyframes typewriter {
+<style>
+	@keyframes typewriter {
     from { width: 0; }
     to { width: 100%; }
 }
@@ -53,7 +54,7 @@ Released   : 20130406
     color: #000; /* Adjust color as needed */
     max-width: 100%;
 }
-
+</style>
 </head>
 
 <body>
