--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Released   : 20130406
 
 .typewriter {
     overflow: hidden; 
-    border-right: 0.15em solid orange; /* Cursor color */
+    border-right: 0.15em solid black; /* Cursor color */
     white-space: nowrap; 
     margin: 0 auto; 
     letter-spacing: 0.15em; 
@@ -38,7 +38,7 @@ Released   : 20130406
     display: inline-block;
     font-family: 'DM Sans', sans-serif; /* Matches your existing font */
     font-size: 2em; /* Adjust size as needed */
-    color: #000; /* Adjust color as needed */
+    color: #228B22; /* Adjust color as needed */
     max-width: 100%;
 }
 </style>
