--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Released   : 20130406
 		<br>
 		<br>
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
-        <p>Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
+        <p><br><br>Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
 	</div>
 	<div id="page" class="container">
 		<div>
