--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ Released   : 20130406
 	<div id="logo" class="container">
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE HEADER FOR EACH PAGE. -->
       <h1 class="typewriter">Danielle Claxton's ePortfolio </h1>
-<br>
 
+		 <p style="text-align: center">Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
        
 	</div>
