--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Released   : 20130406
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE HEADER FOR EACH PAGE. -->
       <h1 class="typewriter">Danielle Claxton's ePortfolio </h1>
 
-		 <p style="text-align: center">Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p>
+		 <h2></h2><p style="text-align: center">Welcome to my design and development ePortfolio for EME 6208. I hope you enjoy!</p></h2>
 		<!-- THIS IS WHERE YOU CUSTOMIZE THE SUBHEADER FOR EACH PAGE. -->
        
 	</div>
