--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Released   : 20130406
 				
 				<!-- THIS IS WHERE YOU CUSTOMIZE THE INTRODUCTORY PARAGRAPH FOR EACH PAGE. -->
                 <p style="text-align: center">
-    Throughout my time in this course, I have learned many valuable lessons about design and development. This ePortfolio exists to display these skills. You will find artifacts related to image editing, web design, video production, and digital animation.
+  My name is Danielle, and I am excited to share my EME 6208 journey with you! I started my career as a classroom teacher in 2015.  I did that for seven years, and while the students were easily the most rewarding part, I felt a pull to explore Educational technology in a more formal way.  Everything I knew was self taught, and sometimes the clumsier path was taken to get my desired results.  I applied for this new course of study to hone these skills.</p><p>Since starting this program this semester, I have learned an unfathomable amount about Educational Technology.    Throughout my time in this course specifically, I really got the hands-on practice that I have been seeking for years.  I have learned many valuable lessons about design and development. This ePortfolio exists to display these skills. You will find artifacts related to image editing, web design, video production, and digital animation.
 </p>
 			</div>
 		</div>
