--- a/web.html
+++ b/web.html
@@ -88,7 +88,7 @@ Click on the images to access your desired quiz.  Enjoy, and good luck! <br><br>
 
 <div id="footer">
 	<!-- START FOOTER -->
-	<p>© 2013 Untitled Inc. All rights reserved.Edited by Danielle Claxton, 2024. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.  Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
+	<p>Edited by Danielle Claxton, 2024.</p><p><a href="http://education.ufl.edu/educational-technology/" rel="nofollow">University of Florida, Educational Technology</a>.</p><p></p>
     <!-- END FOOTER -->
 </div>
 
