--- a/animation.html
+++ b/animation.html
@@ -105,7 +105,7 @@ Released   : 20130406
 
 <div id="footer">
     <!-- START FOOTER -->
-    <p>© 2013 Untitled Inc. All rights reserved. Edited by Danielle Claxton, 2024. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.  Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
+	<p>Edited by Danielle Claxton, 2024.</p><p><a href="http://education.ufl.edu/educational-technology/" rel="nofollow">University of Florida, Educational Technology</a>.</p><p></p>
     <!-- END FOOTER -->
 </div>
 
