--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,9 @@ Released   : 20130406
     
  <center>   
  <h2>Contact Me!</h2>
+	 <a href="https://www.linkedin.com/in/danielle-claxton-78632b77" target="_blank">
+  <img src="linkedin.png" alt="Description of image">
+</a>
 </center>
     <!-- Embed Google Form -->
 <center>    
