--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,8 @@ Released   : 20130406
  <center>   
  <h2>Contact Me!</h2>
 	 <a href="https://www.linkedin.com/in/danielle-claxton-78632b77" target="_blank">
-  <img src="linkedin.png" alt="Description of image">
+  <img src="linkedin.png" alt="Description of image" width="50">
+</a>
 </a>
 </center>
     <!-- Embed Google Form -->
